# personal-server

./: .gitignore  QWEN.md  README.md  docker-compose.yml  foundation.compose.yml  homestack.compose.yml  pyproject.toml
AI-Stack/: .env  README.md  compose-no-ollama.yml  compose.yml  example.env  set_route.sh
Apps/Activepieces/: compose.yml  default.env  metadata.yaml
Apps/Airflow/: compose.yml  default.env  metadata.yaml
Apps/AnythingLLM/: .env  compose.yml  metadata.yaml
Apps/App-Template/: .env.default  compose.lan.yml  compose.yml
Apps/Audiobookshelf/: README.md  compose.yml  default.env  metadata.yaml
Apps/Authentik/: compose.yml  default.env  metadata.yaml
CodeServer/: .env  compose.yaml
Docs/: Backup-Mechanism.md  Creating-New-Apps.md
DroneCI/: default.env
Focalboard/: README.md
GPT-researcher/: docker-compose.yml
Homestack/: .env  README.md  compose.yml  docker-compose.yml
Jellyfin/: .env  README.md  default.env  docker-compose.yml
Mealie/: .env  compose.yaml
Metube/: .env  README.md  default.env  docker-compose.yml
PiHole/: README.md  docker-compose.yml
Stack-AI-LAN/: .env  README.md  compose.yml
Stack-AI-Local/: .env  README.md  compose.yml
Stack-AI-No-Traefik/: .env  README.md  compose.yml
Stack-AI-Office/: README.md  compose.ollama.yml  compose.yml
Stack-AI-Office-2/: .env  README.md  compose.yml
Stack-Template/: .env.default  README.md  compose.yml
Traefik/: .env  README.md  docker-compose.yml
Vikunja/: README.md  docker-compose.yml
Workstack/: .env  README.md  docker-compose.yml
servercraft/: main.py
(+189 files in other folders)
